# axt-tic-tac-toe-gl-haskell

./: README.md  tic-tac-toe-gl.cabal
app/: Main.hs
src/AI/: Algorithms.hs
src/AXT/TicTacToe/: AI.hs  Actions.hs  Conversions.hs  Field.hs  Graphics.hs  Rules.hs  Types.hs
src/Field/: Algorithms.hs
src/Game/: Actions.hs  Conversions.hs  Rules.hs  Types.hs
test/: Helpers.hs  Spec.hs  TestData.hs
test/Tests/TicTacToe/: Actions.hs
