name:                tic-tac-toe-gl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/xruzzz/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                        AI.Algorithms
                        Field.Algorithms
                        Game.Actions
                        Game.Conversions
                        Game.Types
                        Game.Rules
  build-depends:
                        GLUT,
                        base >= 4.7 && < 5,
                        base-unicode-symbols,
                        bytestring,
                        fp-gl
  default-language:    Haskell2010

executable tic-tac-toe-gl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:        GLUT,
                        base,
                        base-unicode-symbols,
                        bytestring,
                        containers,
                        fp-game-logics,
                        fp-gl,
                        random,
                        tic-tac-toe-gl
  default-language:    Haskell2010

test-suite tic-tac-toe-gl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tic-tac-toe-gl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xruzzz/project
