name:                tic-tac-toe-gl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/xruzzz/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                        AXT.TicTacToe.AI
                        AXT.TicTacToe.Field
                        AXT.TicTacToe.Actions
                        AXT.TicTacToe.Conversions
                        AXT.TicTacToe.Types
                        AXT.TicTacToe.Rules
                        AXT.TicTacToe.Graphics
  build-depends:
                        GLUT,
                        OpenGL,
                        base >= 4.7 && < 5,
                        base-unicode-symbols,
                        bytestring,
                        fp-gl,
                        random
  default-language:    Haskell2010

executable tic-tac-toe-gl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:        GLUT,
                        ansi-terminal,
                        base,
                        base-unicode-symbols,
                        bytestring,
                        containers,
                        fp-gl,
                        tic-tac-toe-gl
  default-language:    Haskell2010

test-suite tic-tac-toe-gl-test
  other-modules:
                    Helpers
                    Tests.TicTacToe.Actions
                    TestData
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                        HUnit,
                        QuickCheck,
                        base,
                        base-unicode-symbols,
                        hspec,
                        tic-tac-toe-gl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xruzzz/project
